# PetMatch-Backend

./: .gitignore  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.prod.yaml  docker-compose.yaml  env.example  generate-env.sh  main.py  pet.db  pyproject.toml  setup-deploy-user.sh  test.env
.github/workflows/: build.yaml  pytest.yaml  test.yaml
app/alembic/: env.py
app/alembic/versions/: 161010e39c75_init.py  6b97baf472fa_update_user_model.py
app/src/: scheme.py
app/src/api/: __init__.py
app/src/api/v1/: __init__.py
app/src/api/v1/auth/: __init__.py  crud.py  handlers.py  scheme.py
app/src/api/v1/pets/: __init__.py  handlers.py  scheme.py
app/src/db/: __init__.py
app/src/db/models/: __init__.py  user.py
app/src/db/utils/: helper.py
app/src/utils/: __init__.py  decorators.py
docs/: architecture-and-cicd-spec copy.md  auth_architecture.md
src/: main.py  scheme.py
src/api/: __init__.py
src/api/v1/: __init__.py
src/api/v1/auth/: __init__.py  crud.py  scheme.py  views.py
src/db/: __init__.py  user.py
src/db/utils/: helper.py
tests/: conftest.py  fixtures.py  test_auth.py  test_pets.py
